# LSnap

./: README.md
Coding/: CMakeLists.txt
Coding/LSnap/: CMakeLists.txt  globalhotkey.cpp  globalhotkey.h  lsnapapplicationcore.cpp  lsnapapplicationcore.h  lsnapscreencapture.cpp  lsnapscreencapture.h  main.cpp
Coding/LSnap/lsnapview/: lsnapdrawinglayer.cpp  lsnapdrawinglayer.h  lsnapdrawpanel.cpp  lsnapdrawpanel.h  lsnapdrawpanel.ui  lsnapoverlaywindow.cpp  lsnapoverlaywindow.h  lsnapselectionactionbar.cpp  lsnapselectionactionbar.h  lsnapselectionactionbar.ui  lsnapsystemtray.cpp  lsnapsystemtray.h
Coding/LSnap/lsnapview/lsnapstickerwindow/: lsnappicstickerwindow.cpp  lsnappicstickerwindow.h  lsnapstickerwindowbase.cpp  lsnapstickerwindowbase.h  stickerwindow.cpp  stickerwindow.h
Coding/LSnap/res/: icons.qrc
Coding/LSnapGIF/: CMakeLists.txt  gifrecorder.cpp  gifrecorder.h  gifsaveworker.cpp  gifsaveworker.h  lsnapgif_export.h  lsnapgifpanel.cpp  lsnapgifpanel.h  lsnapgifpanel.ui
Coding/LSnapHistory/: CMakeLists.txt  lsnaphistory.cpp  lsnaphistory.h  lsnaphistory_export.h
LSnap/: CMakeLists.txt  globalhotkey.cpp  globalhotkey.h  main.cpp  mainwindow.cpp  mainwindow.h  overlaywindow.cpp  overlaywindow.h  stickerwindow.cpp  stickerwindow.h
LSnap/lview/: drawpanel.h  gifpanel.cpp  gifpanel.h  selectionactionbar.cpp  selectionactionbar.h
LSnap/recorder/: gifrecorder.cpp  gifrecorder.h  gifsaveworker.cpp  gifsaveworker.h
